--- a/fxHexen2NEW.xcodeproj/xcshareddata/xcschemes/fxHexen2.xcscheme
+++ b/fxHexen2NEW.xcodeproj/xcshareddata/xcschemes/fxHexen2.xcscheme
@@ -68,6 +68,10 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "-portals"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "-nehahra +map neh1m1"
             isEnabled = "NO">
          </CommandLineArgument>
