--- a/fxHexen2NEW.xcodeproj/xcshareddata/xcschemes/fxHexen2.xcscheme
+++ b/fxHexen2NEW.xcodeproj/xcshareddata/xcschemes/fxHexen2.xcscheme
@@ -69,7 +69,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-portals"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-nehahra +map neh1m1"
