fixed tint color

--- a/fxHexen2NEW.xcodeproj/xcshareddata/xcschemes/fxHexen2.xcscheme
+++ b/fxHexen2NEW.xcodeproj/xcshareddata/xcschemes/fxHexen2.xcscheme
@@ -68,8 +68,12 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "+playerclass 5 +map demo1 +chase_active 1"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "-portals"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-nehahra +map neh1m1"
